# src/main/java/dev/pollito/user_manager_backend/entity/Address.java
@@ -1,0 +1,49 @@
+package dev.pollito.user_manager_backend.entity;
+
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
+import java.io.Serializable;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.experimental.FieldDefaults;
+
+@Entity
+@Table(name = "addresses")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class Address implements Serializable {
+
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  @Column(name = "id")
+  Long id;
+
+  @Column(name = "street")
+  String street;
+
+  @Column(name = "suite")
+  String suite;
+
+  @Column(name = "city")
+  String city;
+
+  @Column(name = "zipcode")
+  String zipcode;
+
+  @OneToOne(cascade = CascadeType.ALL)
+  @JoinColumn(name = "geo_id", referencedColumnName = "id")
+  Geo geo;
+}
