# src/main/java/dev/pollito/user_manager_backend/entity/User.java
@@ -1,0 +1,59 @@
+package dev.pollito.user_manager_backend.entity;
+
+import jakarta.persistence.CascadeType;
+import jakarta.persistence.Column;
+import jakarta.persistence.Entity;
+import jakarta.persistence.GeneratedValue;
+import jakarta.persistence.GenerationType;
+import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.OneToOne;
+import jakarta.persistence.Table;
+import java.io.Serializable;
+import java.time.LocalDateTime;
+import lombok.AccessLevel;
+import lombok.AllArgsConstructor;
+import lombok.Getter;
+import lombok.NoArgsConstructor;
+import lombok.Setter;
+import lombok.experimental.FieldDefaults;
+
+@Entity
+@Table(name = "users")
+@Getter
+@Setter
+@NoArgsConstructor
+@AllArgsConstructor
+@FieldDefaults(level = AccessLevel.PRIVATE)
+public class User implements Serializable {
+  @Id
+  @GeneratedValue(strategy = GenerationType.IDENTITY)
+  @Column(name = "id")
+  Long id;
+
+  @Column(name = "creation_time", nullable = false, updatable = false)
+  final LocalDateTime creationTime = LocalDateTime.now();
+
+  @Column(name = "name", nullable = false)
+  String name;
+
+  @Column(name = "username", nullable = false)
+  String username;
+
+  @Column(name = "email", nullable = false)
+  String email;
+
+  @Column(name = "phone")
+  String phone;
+
+  @Column(name = "website")
+  String website;
+
+  @OneToOne(cascade = CascadeType.ALL)
+  @JoinColumn(name = "address_id", referencedColumnName = "id")
+  Address address;
+
+  @OneToOne(cascade = CascadeType.ALL)
+  @JoinColumn(name = "company_id", referencedColumnName = "id")
+  Company company;
+}
